[package]
name = "hilbrank"
version = "0.1.0"
authors = ["Frank McSherry <fmcsherry@me.com>"]

[dependencies.timely]
git = "https://github.com/frankmcsherry/timely-dataflow.git"
# branch = "comm-rewrite"
# path="../timely-dataflow"

[dependencies.radix_sort]
git = "https://github.com/frankmcsherry/radix-sort.git"

[dependencies.graph_layout]
git = "https://github.com/frankmcsherry/graph-layout.git"

[dependencies.graph_map]
git = "https://github.com/frankmcsherry/graph-map.git"

[dependencies]
getopts="*"
time = "*"
mmap="*"
byteorder="*"
